Added comments, nerfed mobs, and fixed combat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "recomendedlevel"
+        "arraylist",
+        "Lazer",
+        "recomendedlevel",
+        "Stam",
+        "teleporting"
     ]
 }
